# isclose

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: euclid.rs  half.rs  lib.rs  macros.rs
