[package]
name = "isclose"
version = "0.1.0"
authors = ["Lucas Jansen"]
edition = "2018"
rust-version = "1.60"
description = "A collection of trait and macros for comparing approximate equality"
repository = "https://github.com/staticintlucas/isclose"
license = "MIT OR Apache-2.0"
keywords = ["float", "equal", "isclose", "is_close", "approximate"]
categories = ["command-line-utilities", "graphics", "multimedia::images", "rendering"]

[features]
default = ["std"]
std = ["euclid?/std"]
libm = ["dep:libm", "euclid?/libm"]
half = ["dep:half"]
euclid = ["dep:euclid"]

[dependencies]
euclid = { version = "0.22", default-features = false, optional = true }
half = { version = "2", default-features = false, features = ["num-traits"], optional= true }
libm = { version = "0.2", optional = true }

[package.metadata.docs.rs]
all-features = true
